--- a/html/jiangyu.html
+++ b/html/jiangyu.html
@@ -16,8 +16,7 @@
     <h2> git commit 表示把暂存区的文件提交到 本地仓库  </h2>
     <h2> git pull 取回远程主机某个分支的更新，再与本地的指定分支合并  </h2>
     <h2> git push 命令用于将本地分支的更新，推送到远程主机  </h2>
-
-
-
+    <h2> git branch 查看分支</h2>
+    <h2> git checkout 切换分支</h2>
 </body>
 </html>
