--- a/html/jiangyu.html
+++ b/html/jiangyu.html
@@ -18,5 +18,6 @@
     <h2> git push 命令用于将本地分支的更新，推送到远程主机  </h2>
     <h2> git branch 查看分支</h2>
     <h2> git checkout 切换分支</h2>
+    <h2> git 上传项目  </h2>
 </body>
 </html>
